--- a/index.html
+++ b/index.html
@@ -165,20 +165,26 @@
 
   function filterPokemon() {
     const input = normalize(document.getElementById("pattern").value.trim());
-    
+
     if (!input) {
       document.getElementById("results").innerHTML = "<em>Écris un motif ci-dessus</em>";
       return;
     }
 
-    const regex = new RegExp("^" + escapeRegex(input).replace(/_/g, ".") + "$");
+    // remplacer "_" par "." pour regex et ignorer majuscules/minuscules
+    const regex = new RegExp("^" + escapeRegex(input).replace(/_/g, ".") + "$", "i");
 
-    const matches = pokemonList.filter(p => regex.test(normalize(p)));
+    const matches = pokemonList.filter(p => {
+        // normaliser le nom du Pokémon
+        const name = normalize(p);
+        return regex.test(name);
+    });
 
     document.getElementById("results").innerHTML = matches.length
       ? matches.map(p => `<div class="pokemon">${p}</div>`).join("")
       : "<em>Aucun Pokémon trouvé</em>";
-  }
+}
+
 </script>
 
 </body>
