--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
   <style>
     body { font-family: Arial, sans-serif; margin: 2rem; background: #f8f9fa; color: #333; }
     h1 { color: #e3350d; }
+    <div>
+  <label>
+    <input type="radio" name="searchType" value="pokemon" checked>
+    Pokémon
+  </label>
+  <label>
+    <input type="radio" name="searchType" value="talent">
+    Talent
+  </label>
+    </div>
     input { margin: 0.5rem 0; padding: 0.5rem; font-size: 1rem; }
     button { padding: 0.5rem 1rem; margin-top: 0.5rem; background: #e3350d; color: white; border: none; cursor: pointer; }
     button:hover { background: #b52a0a; }
@@ -153,6 +163,12 @@
       "Roc-de-Fer", "Chef-de-Fer", "Terapagos", "Pêchaminus"
     ];
 
+    //Liste de tous les talents
+    const talentList = [
+      "Brasier", "Engrais", "Torrent",
+      
+      ];
+
   // Fonction pour échapper les caractères spéciaux dans le regex
   function escapeRegex(str) {
     return str.replace(/[.*+?^${}()|[\]\\]/g, '\\$&');
@@ -164,7 +180,7 @@
   }
 
   // Rendre la fonction globale pour que onclick fonctionne
-window.filterPokemon = function() {
+window.filterSearch = function() {
     const input = normalize(document.getElementById("pattern").value.trim());
 
     if (!input) {
@@ -172,14 +188,19 @@ window.filterPokemon = function() {
       return;
     }
 
+    // Vérifier si on cherche un Pokémon ou un Talent
+    const searchType = document.querySelector('input[name="searchType"]:checked').value;
+    const dataList = searchType === "pokemon" ? pokemonList : talentList;
+
     const regex = new RegExp("^" + escapeRegex(input).replace(/_/g, ".") + "$", "i");
 
-    const matches = pokemonList.filter(p => regex.test(normalize(p)));
+    const matches = dataList.filter(item => regex.test(normalize(item)));
 
     document.getElementById("results").innerHTML = matches.length
-      ? matches.map(p => `<div class="pokemon">${p}</div>`).join("")
-      : "<em>Aucun Pokémon trouvé</em>";
+      ? matches.map(m => `<div class="${searchType}">${m}</div>`).join("")
+      : `<em>Aucun ${searchType} trouvé</em>`;
 };
+
 
 </script>
 
