--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
   <title>Trouve ton Pokémon</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 2rem; background: #f8f9fa; color: #333; }
-    h1 { color: #e3350d; }
+  h1 { color: #e3350d; }
+  input { margin: 0.5rem 0; padding: 0.5rem; font-size: 1rem; }
+  button { padding: 0.5rem 1rem; margin-top: 0.5rem; background: #e3350d; color: white; border: none; cursor: pointer; }
+  button:hover { background: #b52a0a; }
+  .results { margin-top: 1.5rem; }
+  .pokemon { padding: 0.3rem; border-bottom: 1px solid #ddd; }
+  em { color: #555; }
+
     <div>
   <label>
     <input type="radio" name="searchType" value="pokemon" checked>
@@ -31,17 +38,6 @@
     Tape un mot avec <strong>_</strong> pour les lettres inconnues.<br>
     Exemple : <code>pi__chu</code> → <em>pikachu</em>
   </p>
-
-  <div>
-    <label>
-      <input type="radio" name="searchType" value="pokemon" checked>
-      Pokémon
-    </label>
-    <label>
-      <input type="radio" name="searchType" value="talent">
-      Talent
-    </label>
-  </div>
 
   <input type="text" id="pattern" placeholder="ex: pi__chu" size="30">
   <br>
