--- a/index.html
+++ b/index.html
@@ -173,7 +173,48 @@
 
     //Liste de tous les talents
     const talentList = [
-      "Brasier", "Engrais", "Torrent",
+      "Absentéisme", "Absorbe-Eau", "Absorbe-Volt", "Agitation", "Air Lock", "Anti-Bruit", "Armumagma",
+      "Armurbaston", "Attention", "Benêt", "Cacophonie", "Brasier", "Engrais", "Torrent", "Calque", 
+      "Chlorophylle", "Ciel Gris", "Coloforce", "Coque Armure", "Corps Ardent", "Corps Sain", "Crachin", 
+      "Cran", "Cuvette", "Homochromie", "Écaille Spéciale", "Échauffement", "Écran Fumée", "Écran Poudre", 
+      "Esprit Vital", "Essaim", "Fermeté", "Force Pure", "Fuite", "Garde Mystik", "Glissade", 
+      "Glu", "Hyper Cutter", "Ignifu-Voile", "Insomnia", "Intimidation", "Isograisse", "Joli Sourire", "Lévitation", 
+      "Luminescence", "Magnépiège", "Marque Ombre", "Matinal", "Médic Nature", "Météo", "Moins", "Moiteur", 
+      "Mue", "Œil Composé", "Paratonnerre", "Oeil Composé", "Peau Dure", "Piège Sable", "Plus", "Point Poison", 
+      "Pose Spore", "Pression", "Puanteur", "Ramassage", "Regard Vif", "Sable Volant", "Sécheresse", "Sérénité", 
+      "Statik", "Suintement", "Synchro", "Tempo Perso", "Tête de Roc", "Torche", "Turbo", "Vaccin", "Ventouse", 
+      "Voile Sable", "Adaptabilité", "Alerte Neige", "Annule Garde", "Anticipation", "Boom Final", "Brise Moule", 
+      "Chanceux", "Cherche Miel", "Colérique", "Corps Gel", "Début Calme", "Délestage", "Don Floral", "Feuille Garde", 
+      "Filtre", "Force Soleil", "Fouille", "Frein", "Garde Magik", "Gloutonnerie", "Hydratation","Ignifugé", 
+      "Impassible", "Inconscient", "Lavabo", "Lentiteintée", "Maladresse", "Mauvais Rêve", "Motorisé", "Multi-Coups", 
+      "Multi-Type", "Normalise", "Peau Sèche", "Pied Confus", "Pied Véloce", "Poing de Fer", "Prédiction", 
+      "Querelleur", "Rideau Neige", "Rivalité", "Simple", "Sniper", "Soin Poison", "Solide Roc", "Technicien", 
+      "Télécharge", "Téméraire", "Acharné", "Analyste", "Armurouillée", "Baigne Sable", "Cœur de Coq", "Coeur de Coq", 
+      "Cœur Noble", "Coeur Noble", "Cœur Soin", "Coeur Soin", "Contestation", "Corps Maudit", "Défaitiste", 
+      "Envelocape", "Épine de Fer", "Farceur", "Force Sable", "Garde-Ami", "Heavy Metal", "Herbivore", "Illusion", 
+      "Imposteur", "Impudence", "Infiltration", "Light Metal", "Lunatique", "Miroir Magik", "Mode Transe", "Momie", 
+      "Multiécaille", "Peau Miracle", "Phobique", "Pickpocket", "Rage Brûlure", "Rage Poison", "Récolte", 
+      "Régé-Force", "Sans Limite", "Télépathe", "Tension", "Téra-Voltage", "Toxitouche", "Turbo Brasier", "Victorieux", 
+      "Ailes Bourrasque", "Amour Filial", "Aroma-Voile", "Aura Féérique", "Aura Inversée", "Aura Ténébreuse", "Bajoues", 
+      "Battant", "Déclic Tactique", "Flora-Voile", "Gluco-Voile", "Griffe Dure", "Magicien", "Méga Blaster", "Pare-Balles", 
+      "Peau Céleste", "Peau Féérique", "Peau Gelée", "Poisseux", "Prognathe", "Protéen", "Symbiose", "Toison Épaisse", 
+      "Toison Herbue", "Mer Primaire", "Souffle Delta", "Terre Finale", "Animacœur", "Animacoeur", "Aquabulle", "Banc", 
+      "Batterie", "Boost Chimère", "Bouclier-Carcan", "Boule de Poils", "Chasse-Neige", "Corps Coloré", "Corrosion", 
+      "Créa-Brume", "Créa-Élec", "Créa-Herbe", "Créa-Psy", "Cruauté", "Danseuse", "Endurance", "Escampette", "Expert Acier", 
+      "Expuls'Organes", "Fantômasque", "Filature", "Folle Furie", "Hydrata-Son", "Hypersommeil", "Longue Portée", 
+      "Mèche Rebelle", "Métallo-Garde", "Osmose", "Peau Électrique", "Prestance Royale", "Prioguérison", "Prisme-Armure", 
+      "Rassemblement", "Receveur", "Repli Tactique", "Sable Humide", "Spectro-Bouclier", "Surf Caudal", "Synergie", 
+      "Système Alpha", "Cérébro-Force", "Âme Vagabonde", "Armure Miroir", "Boost Acier", "Brise-Barrière", "Cercle d'Énergie", 
+      "Corps Condamné", "Déclic Fringale", "Dégobage", "Écailles Glacées", "Effilochage", "Égide Inflexible", "Entêtement", 
+      "Expul'Sable", "Gaz Inhibiteur", "Lame Indomptable", "Libéro", "Mimétisme", "Mûrissement", "Nerfs d'Acier", 
+      "Propulseur", "Punk Rock", "Ramasse Ball", "Tête de Gel", "Turbine", "Voile Pastel", "Poing Invisible", "Tir Vif", 
+      "Blanche Ruade", "Breuvage Suspect", "Dent de Dragon", "Osmose Équine", "Sombre Ruade", "Transistor", "Absorbe-Terre", 
+      "Aéroporté", "Armure Caudale", "Bien Cuit", "Bois du Fléau", "Charge Quantique", "Chien de Garde", "Collab", 
+      "Commandant", "Corps en Or", "Courroupace", "Dépôt Toxique", "Épée du Fléau", "Force Fongique", "Général Suprême", "Grecharge", 
+      "Incisif", "Moteur à Hadrons", "Odeur Tenace", "Opportuniste", "Paléosynthèse", "Perles du Fléau", "Porte-Roche", 
+      "Pouls Orichalque", "Ruminant", "Sel Purificateur", "Semencier", "Supermutation", "Thermodynamique", "Turbine Éolienne", 
+      "Urne du Fléau", "Aux Petits Soins", "Chaîne Toxique", "Force Mémorielle", "Nectar Mielleux", "Œil Révélateur", 
+      "Oeil Révélateur", "Téramorphose", "Téra-Carapace", "Téraformation 0", "Emprise Toxique"
       
       ];
 
