--- a/download.html
+++ b/download.html
@@ -15,7 +15,10 @@
   <h1>MyWebsite - Téléchargement</h1>
   <nav>
     <a href="index.html" class="menu-button" style="text-decoration:none; color:white;">Accueil</a>
-    <a href="PkmnFinder.html" class="menu-button" style="text-decoration:none; color:white;">Pokémon Finder</a>
+    <button class="menu-button" onclick="toggleDropdown('applicationDropdown')">Application ▾</button>
+    <div id="applicationDropdown" class="dropdown">
+      <a href="PkmnFinder.html">Pokémon Finder</a>
+    </div>
   </nav>
 </header>
 
@@ -23,6 +26,25 @@
   <h2>Bientôt disponible !</h2>
   <p>Les téléchargements seront disponibles ici.</p>
 </main>
+  
+<script>
+function toggleDropdown(id) {
+  const dropdowns = document.querySelectorAll('.dropdown');
+  dropdowns.forEach(dd => {
+    if (dd.id !== id) dd.classList.remove('show'); // fermer les autres
+  });
+  const dropdown = document.getElementById(id);
+  dropdown.classList.toggle('show'); // ouvrir/fermer celui-ci
+}
+
+// Fermer le menu si clic en dehors
+window.onclick = function(event) {
+  if (!event.target.matches('.menu-button')) {
+    const dropdowns = document.querySelectorAll('.dropdown');
+    dropdowns.forEach(dd => dd.classList.remove('show'));
+  }
+}
+</script>
 
 </body>
 </html>
