Update description for EggsDeletor download

--- a/download.html
+++ b/download.html
@@ -125,7 +125,7 @@
     <div class="download-grid">
       <a href="https://github.com/Pohalyah/MyWebsite/releases/download/downloads/EggsDeletor.zip" class="download-card" download>
         <h3>EggsDeletor</h3>
-        <p>test</p>
+        <p>Le EggsDeletor permet de supprimer les pokémons automatiquement et rapidement dans Cobblemon!</p>
       </a>
 
       <!-- Exemple pour ajouter d'autres fichiers :
