Comment out DOCTYPE and closing HTML tags

--- a/optimizer.html
+++ b/optimizer.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -552,8 +552,9 @@
                     Métamorph valides: <span id="validDittosCount">0</span> / 30 maximum utilisés
                 </div>
 
-                <div class="ditto-grid" id="dittoGrid">
+                <div class="ditto-grid" id="dittoGrid"> -->
                     <!-- Les cartes Métamorph seront générées ici par JavaScript -->
+<!--
                 </div>
 
                 <div class="buttons">
@@ -1226,3 +1227,4 @@
     </script>
 </body>
 </html>
+ -->
