Update download link for EggsDeletor to .exe

--- a/download.html
+++ b/download.html
@@ -123,7 +123,7 @@
     <p>Les téléchargements disponibles :</p>
 
     <div class="download-grid">
-      <a href="https://github.com/Pohalyah/MyWebsite/releases/download/downloads/EggsDeletor.zip" class="download-card" download>
+      <a href="https://github.com/Pohalyah/MyWebsite/releases/download/downloads/EggsDeletor.exe" class="download-card" download>
         <h3>EggsDeletor</h3>
         <p>Le EggsDeletor permet de supprimer les pokémons automatiquement et rapidement dans Cobblemon!</p>
       </a>
